--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,35 +1,35 @@
 @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/Montserrat-ExtraLight.ttf") format("truetype");
+    src: "{{ asset('fonts/Montserrat-ExtraLight.ttf')}}" format("truetype");
     font-weight: 100;
 }
 
 @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/Montserrat-Light.ttf") format("truetype");
+src: "{{ asset('fonts/Montserrat-Light.ttf')}}" format("truetype");
     font-weight: 300;
 }
 
 @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/Montserrat-Regular.ttf") format("truetype");
+    src: "{{ asset('fonts/Montserrat-Regular.ttf')}}" format("truetype");
     font-weight: 500;
 }
 
 @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/Montserrat-Bold.ttf") format("truetype");
+    src: "{{ asset('fonts/Montserrat-Bold.ttf')}}" format("truetype");
     font-weight: 600;
 }
 
 @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/Montserrat-ExtraBold.ttf") format("truetype");
+    src: "{{ asset('fonts/Montserrat-ExtraBold.ttf')}}" format("truetype");
     font-weight: 700;
 }
 
 @font-face {
     font-family: "Montserrat";
-    src: url("../fonts/Montserrat-Black.ttf") format("truetype");
+    src: "{{ asset('fonts/Montserrat-Black.ttf')}}" format("truetype");
     font-weight: 900;
 }
