cambios en index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,58 +1,79 @@
-/* html{
-    background-c
-    width: auto;
-    height: auto;
-    background-attachment: scroll;
-    background-repeat: no-repeat;
-
-    
-} */
-
-h1, body{
-    font-size: 100px;
-    font-weight: 600;
-    color: #000000;
-    font-family: 'Montserrat';
-}
-
-.inp{ 
-    margin-top: 100px;
-    flex-direction: column;
-    width: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-.carousel-item img {
-    max-height: 700px;
-    width: auto;
-}
-
-body{
+html, body {
     padding: 0;
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
     color: white;
 }
 
-.login-box {
-    width: 280px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+h1 {
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: #000;
 }
 
-.login-box h1{
-    float: left;
-    font-size: 40px;
-    border-bottom: 6px solid #4caf50;
-    margin-bottom: 50px;
-    padding: 13px 0;
+.info-h1 {
+    color: #fff;
+    text-align: center;
+    width: 100%;
 }
 
-.textbox{
+.p-info {
+    color: #fff;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.container-1 {
+    background-image: url('../img/comidarica.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: auto;
+    padding: 20px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.cont-info {
+    position: relative;
+    padding: 20px;
+    background-color: #00000062;
+    max-width: 500px;
+    width: 100%;
+    margin: 20px 0;
+}
+
+.container-logo {
+    width: 100%;
+    max-width: 280px;
+    height: 280px;
+    margin-bottom: 20px;
+    background-color: #00000062;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    max-width: 80%;
+    height: auto;
+}
+
+.inp {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.textbox {
     width: 100%;
     overflow: hidden;
     font-size: 20px;
@@ -61,13 +82,13 @@ body{
     border-bottom: 1px solid #4caf50;
 }
 
-.textbox i{
+.textbox i {
     width: 26px;
     float: left;
     text-align: center;
 }
 
-.textbox input{
+.textbox input {
     border: none;
     outline: none;
     background: none;
@@ -78,7 +99,7 @@ body{
     margin: 0 10px;
 }
 
-.btn{
+.btn {
     width: 100%;
     background: none;
     border: 2px solid #4caf50;
@@ -89,51 +110,46 @@ body{
     margin: 12px 0;
 }
 
-.info-h1{
-    color: #fff;
-    text-align: center;
-    width: 100%;
+@media (min-width: 768px) {
+    .info {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .container-logo {
+        margin-bottom: 0;
+        margin-right: 20px;
+    }
+
+    .cont-info {
+        margin: 0;
+    }
+
+    .info-h1 {
+        font-size: 2rem;
+    }
+
+    .p-info {
+        font-size: 1.125rem;
+    }
 }
 
-.cont-info{
-    padding: 20px;
-    background-color: #00000062;
-    width: 500px;
-}
+@media (min-width: 1024px) {
+    .container-1 {
+        padding: 40px;
+        height: 600px;
+    }
 
-.info{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
+    .logo {
+        max-width: 200px;
+    }
 
-.p-info{
-    color: #fff;
-}
+    .info-h1 {
+        font-size: 2.5rem;
+    }
 
-.container-logo{
-    width: 280px;
-    height: 280px;
-    background-color: #00000062;
-    border-radius: 100%;
-    align-content: center;
-}
-
-.logo{margin-top: -8%;
-    margin-left: 15%;
-    max-width: 200px;
-}
-
-.container-1{
-    background-image: url('../img/comidarica.jpg');
-    background-size: cover;
-    background-position: center;
-    border: 2px solid #000;
-    max-width: 100%;
-    height: 600px;
-    margin-left: 0;
-    margin-right: 0;
-    display: flex;
+    .p-info {
+        font-size: 1.25rem;
+    }
 }
